[gd_scene load_steps=2 format=3 uid="uid://brgofs2lactfl"]

[ext_resource type="Script" path="res://Objects/Enemies/EnemyManager/enemy_manager.gd" id="1_w36od"]

[node name="EnemyManager" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_w36od")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="FodderTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FodderTimer" to="." method="_on_fodder_timer_timeout"]
